# can_test

./: .gitignore  Cargo.toml  devenv.nix  devenv.nix.bak  docs.md  main.py  pyproject.toml  receive.py  requirements.txt  scanner.py  send.py  snmp.nix  tailwind.config.js
can_test/: gui.py  main.py  receive.py  report.py  scanner.py  screen.py  send.py  tailwind.config.js
can_test/static/: output.css
can_test/templates/: base.html  create_report.html  index.html  step_1.html  step_2.html  step_3.html  step_4.html  vga_scan.html  vga_step_1.html  vga_step_2.html
can_test/templates/components/: error.html  start_scan.html  success.html  success_1.html  success_2.html
src/: lib.rs  main.rs
static/: output.css
templates/: base.html  index.html  step_1.html  step_2.html  step_3.html  step_4.html
templates/components/: error.html  start_scan.html
