[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "can_test"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "certifi==2024.8.30",
    "charset-normalizer==3.4.0",
    "customtkinter==5.2.2",
    "darkdetect==0.8.0",
    "idna==3.10",
    "msgpack==1.0.8",
    "mypy==1.10.1",
    "mypy-extensions==1.0.0",
    "netifaces==0.11.0",
    "packaging==24.1",
    "pillow==11.0.0",
    "ply==3.11",
    "pyasn1==0.6.1",
    "pycryptodomex==3.21.0",
    "pyftdi==0.55.4",
    "pyserial==3.5",
    "pysnmp==7.1.12",
    "pysnmp-pyasn1==1.1.3",
    "pysnmp-pysmi==1.1.12",
    "pysnmplib==5.0.24",
    "python-can==4.4.2",
    "python-multipart==0.0.17",
    "pyusb==1.2.1",
    "requests==2.32.3",
    "result==0.17.0",
    "returns==0.23.0",
    "typing-extensions==4.12.2",
    "urllib3==2.2.3",
    "wrapt==1.16.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]

[project.scripts]
can_test = "can_test.main:main"
